--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Tongqing Qiu
+name: Roger Trullo
 
 # Short bio or description (displayed in the header)
-description: Software Developer
+description: PhD student in Medical Imaging
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,10 +18,10 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: tongqing.qiu@gmail.com
+  email: rogertrullo@gmail.com
   facebook: 
   flickr: 
-  github: tongqqiu
+  github: rogertrullo
   instagram: 
   linkedin: 
   pinterest: 
