--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Roger Trullo
 description: PhD student in Medical Imaging
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/jekyll-logo.png
+avatar: https://github.com/rogertrullo/rogertrullo.github.io/blob/master/images/jekyll-logo.png
 #https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
